Vertical align fix

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -34,7 +34,7 @@ $card-border-clr: #283140;
 }
 .card__image {
 	padding: 0 10px;
-	
+	vertical-align: bottom;
 }
 .card__text {
 	font-size: 18px;
